--- a/frontend/views/header.ejs
+++ b/frontend/views/header.ejs
@@ -1,22 +1,43 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="http://localhost:3000/">Home <span class="sr-only"></span></a>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+    <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+		<link rel='stylesheet' href='/stylesheets/style.css' />
+	</head>
+	<body>
+		<ul class='nav navbar-dark bg-dark justify-content-between align-items-center'>
+      <li class='nav-item m-3'>
+        <a class="navbar-brand" href="/#">Dylans Shop</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
+        <a href="/login" id='auth' class='btn btn-outline-light m-2' >Login</a>
+        <a href="/basket" id='auth' class='btn btn-outline-light m-2'>Basket</a>
+        <script>
+          window.userLoggedIn = false
+
+          function logout() {
+            localStorage.removeItem('access')
+            localStorage.removeItem('refresh')
+            window.userLoggedIn = false
+          }
+        
+          function isLoggedIn(){
+            let accessToken = localStorage.getItem("access");
+            if (accessToken) {
+              // if there is an access token in localstorage
+              window.userLoggedIn = true
+            }
+
+            if (window.userLoggedIn) {
+              let loginBtn = document.getElementById("auth");
+              loginBtn.innerHTML = "Logout";
+              loginBtn.href = "/";
+              loginBtn.addEventListener("click", logout)
+            }
+          }
+        
+          isLoggedIn();
+        </script>
       </li>
     </ul>
-  </div>
-</nav>
